--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Greece Municipality Population Densities</title>
         <link rel="stylesheet" type="text/css" href="Greece.css">
-		<script type="text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
+		<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 		<style type="text/css">
 			/* No style rules here yet */		
 		</style>
