--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 			
 		</script>
         <br>
+	<a href="https://github.com/fruitpenninja/Greece">Github Repository</a>
         <a href="https://en.wikipedia.org/wiki/List_of_municipalities_of_Greece_(2011)">Greece Municipality Population Density for 2011</a>
         <p>Brian Tran</p>
         <p>Instructor: Suresh Lodha</p>
